@@ -93,27 +93,73 @@ static inline double php_intpow10(int power) {
 /* {{{ php_round_helper
        Actually performs the rounding of a value to integer in a certain mode */
 static inline double php_round_helper(double value, int mode) {
-	double tmp_value;
+	double integral, fractional;
 
-	if (value >= 0.0) {
-		tmp_value = floor(value + 0.5);
-		if ((mode == PHP_ROUND_HALF_DOWN && value == (-0.5 + tmp_value)) ||
-			(mode == PHP_ROUND_HALF_EVEN && value == (0.5 + 2 * floor(tmp_value/2.0))) ||
-			(mode == PHP_ROUND_HALF_ODD  && value == (0.5 + 2 * floor(tmp_value/2.0) - 1.0)))
-		{
-			tmp_value = tmp_value - 1.0;
-		}
-	} else {
-		tmp_value = ceil(value - 0.5);
-		if ((mode == PHP_ROUND_HALF_DOWN && value == (0.5 + tmp_value)) ||
-			(mode == PHP_ROUND_HALF_EVEN && value == (-0.5 + 2 * ceil(tmp_value/2.0))) ||
-			(mode == PHP_ROUND_HALF_ODD  && value == (-0.5 + 2 * ceil(tmp_value/2.0) + 1.0)))
-		{
-			tmp_value = tmp_value + 1.0;
-		}
+	/* Split the input value into the integral and fractional part.
+	 *
+	 * Both parts will have the same sign as the input value. We take
+	 * the absolute value of the fractional part (which will not result
+	 * in branches in the assembly) to make the following cases simpler.
+	 */
+	fractional = fabs(modf(value, &integral));
+
+	switch (mode) {
+		case PHP_ROUND_HALF_UP:
+			if (fractional >= 0.5) {
+				/* We must increase the magnitude of the integral part
+				 * (rounding up / towards infinity). copysign(1.0, integral)
+				 * will either result in 1.0 or -1.0 depending on the sign
+				 * of the input, thus increasing the magnitude, but without
+				 * generating branches in the assembly.
+				 *
+				 * This pattern is equally used for all the other modes.
+				 */
+				return integral + copysign(1.0, integral);
+			}
+
+			return integral;
+
+		case PHP_ROUND_HALF_DOWN:
+			if (fractional > 0.5) {
+				return integral + copysign(1.0, integral);
+			}
+
+			return integral;
+
+		case PHP_ROUND_HALF_EVEN:
+			if (fractional > 0.5) {
+				return integral + copysign(1.0, integral);
+			}
+
+			if (fractional == 0.5) {
+				bool even = !fmod(integral, 2.0);
+
+				/* If the integral part is not even we can make it even
+				 * by adding one in the direction of the existing sign.
+				 */
+				if (!even) {
+					return integral + copysign(1.0, integral);
+				}
+			}
+
+			return integral;
+		case PHP_ROUND_HALF_ODD:
+			if (fractional > 0.5) {
+				return integral + copysign(1.0, integral);
+			}
+
+			if (fractional == 0.5) {
+				bool even = !fmod(integral, 2.0);
+
+				if (even) {
+					return integral + copysign(1.0, integral);
+				}
+			}
+
+			return integral;
 	}
 
-	return tmp_value;
+	ZEND_UNREACHABLE();
 }
 /* }}} */
 
