@@ -10,5 +10,7 @@ DOM:
 
 Standard:
   . Implement GH-12188 (Indication for the int size in phpinfo()). (timwolla)
+  . Partly fix GH-12143 (Incorrect round() result for 0.49999999999999994).
+    (timwolla)
 
 <<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>
